# menace-graphics

./: CMakeLists.txt  README.md  build.sh  window.cpp
include/: Mesh.h  triangle.h
include/glad/: glad.h
shaders/: vertex_shader.glsl
src/: Mesh.cpp  Object3D.cpp  Renderer.cpp  glad.c  main.cpp  triangle.cpp
